RESOLVED FIXED 157705
ToT WebKit doesn't show tooltip on perf dashboard's summary page
https://bugs.webkit.org/show_bug.cgi?id=157705
Summary ToT WebKit doesn't show tooltip on perf dashboard's summary page
Ryosuke Niwa
Reported 2016-05-13 21:30:30 PDT
Reproduction steps: 1. Install latest safari (or Tech Preview) 2. Open the internal perf dashboard's v3 summary page 3. Hover to one of the bars Expected result: Says either "Open charts" or lists the platforms that are missing or ones without baselines. Actual result: The title of the ratio bar does not show up.
Attachments
Fixes the bug (6.68 KB, patch)
2016-05-13 21:32 PDT, Ryosuke Niwa
no flags
Fixed builds (6.68 KB, patch)
2016-05-13 21:33 PDT, Ryosuke Niwa
no flags
Fixed one more bug (7.32 KB, patch)
2016-05-13 21:41 PDT, Ryosuke Niwa
darin: review+
Ryosuke Niwa
Comment 1 2016-05-13 21:32:51 PDT
Created attachment 278920 [details] Fixes the bug
Ryosuke Niwa
Comment 2 2016-05-13 21:33:39 PDT
Created attachment 278921 [details] Fixed builds
Ryosuke Niwa
Comment 3 2016-05-13 21:41:12 PDT
Created attachment 278922 [details] Fixed one more bug
Ryosuke Niwa
Comment 4 2016-05-13 21:41:34 PDT
Darin Adler
Comment 5 2016-05-14 08:54:15 PDT
Comment on attachment 278922 [details] Fixed one more bug View in context: https://bugs.webkit.org/attachment.cgi?id=278922&action=review > Source/WebCore/dom/Node.h:282 > + ContainerNode* parentInComposedTree() const; What the both callers really need is parentElementInComposedTree. Neither is interested in non-elements. On the other hand it would be tricky to structure the loop right since the starting node is not necessarily an element.
Ryosuke Niwa
Comment 6 2016-05-14 14:04:34 PDT
(In reply to comment #5) > Comment on attachment 278922 [details] > Fixed one more bug > > View in context: > https://bugs.webkit.org/attachment.cgi?id=278922&action=review > > > Source/WebCore/dom/Node.h:282 > > + ContainerNode* parentInComposedTree() const; > > What the both callers really need is parentElementInComposedTree. Neither is > interested in non-elements. On the other hand it would be tricky to > structure the loop right since the starting node is not necessarily an > element. Yeah, and we'd need something like parentInComposedTree for the first node anyway.
Ryosuke Niwa
Comment 7 2016-05-14 14:06:35 PDT
Ryosuke Niwa
Comment 8 2019-10-04 22:37:59 PDT
*** Bug 108302 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.