ToT WebKit doesn't show tooltip on perf dashboard's summary page https://bugs.webkit.org/show_bug.cgi?id=157705

Reviewed by Darin Adler.

Source/WebCore:

The bug was caused by WebKit doesn't look for the title attribute across shadow boundaries.
Fixed it by using a newly added Node::parentNodeInComposedTree in HitTestResult::title.

Test: fast/shadow-dom/tooltip-on-composed-tree.html

* dom/Node.cpp:
(WebCore::Node::parentInComposedTree): Added.
* dom/Node.h:
* rendering/HitTestResult.cpp:
(WebCore::HitTestResult::title): Fixed the bug.
(WebCore::HitTestResult::innerTextIfTruncated): Fixed a related bug when ShowsToolTipOverTruncatedText
is enabled. Unfortunately, there is no machinery to test this feature yet.

LayoutTests:

Added a regression test for finding a tooltip across shadow boundaries.

* fast/shadow-dom/tooltip-on-composed-tree-expected.txt: Added.
* fast/shadow-dom/tooltip-on-composed-tree.html: Added.


Canonical link: https://commits.webkit.org/175846@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@200923 268f45cc-cd09-0410-ab3c-d52691b4dbfc